[package]
name = "quiet-stroll"
version = "1.0.1"
edition = "2021"
authors = ["Philippe Llerena<philippe.llerena@gmail.com>"]
description = "A web server to deliver basic File System informations"
readme = "README.md"
license-file = "LICENSE"
documentation = "https://github.com/forticheprod/quiet-stroll/blob/main/README.md"
repository = "https://github.com/forticheprod/quiet-stroll"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.8.1"
serde_json = "1.0.108"
glob = "0.3.1"
schemars = "0.8.15"
framels = "0.5.3"
rocket_okapi = { git = "https://github.com/GREsau/okapi.git", features = [
    "swagger",
    "rapidoc",
] }

[dependencies.rocket]
version = "0.5.0"
features = ["json"]
