[package]
name = "quiet-stroll"
version = "1.1.3"
edition = "2021"
authors = ["Philippe Llerena<philippe.llerena@gmail.com>"]
description = "A web server to deliver basic File System informations"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/forticheprod/quiet-stroll"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.8.1"
serde_json = "1.0.138"
glob = "0.3.2"
schemars = "0.8.21"
framels = "0.7.6"

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.rocket_okapi]
version = "0.9.0"
features = ["swagger"]
